rename to core-layout-trbl

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "core-absolute-layout",
+  "name": "core-layout-trbl",
   "private": true,
   "dependencies": {
     "polymer": "Polymer/polymer#master"
